Backport World1-6Essentials to 1.12.2 again.